--- a/app/src/main/res/layout/office_senior.xml
+++ b/app/src/main/res/layout/office_senior.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".office.MunicipalMayorOffice">
+    tools:context=".office.SENIOR">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="150dp"
-            android:text="@string/titleMayors"
+            android:text="@string/titleSENIOR"
             android:textColor="#49454F"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -73,19 +73,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="Issuance of Mayor’s Clearance"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/service_2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginRight="16dp"
-                    android:gravity="center"
-                    android:text="Issuance of Mayor’s Permit"
+                    android:text="Issuance/ Re Issuance of Identification Card and Purchase Booklet for Senior Citizen"
                     android:textColor="#49454F" />
 
             </LinearLayout>
