--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -279,7 +279,7 @@
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/textView30"
+                    android:id="@+id/sbo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
