added mswdo, completed until mswdo services 5

--- a/app/src/main/res/layout/office_mswdo.xml
+++ b/app/src/main/res/layout/office_mswdo.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".office.MPDO">
+    tools:context=".office.MSWDO">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="150dp"
             android:gravity="center"
-            android:text="@string/titleMPDO"
+            android:text="@string/titleMSWDO"
             android:textColor="#49454F"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -61,12 +61,12 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="35dp"
-                    android:text="External Services"
+                    android:text="Internal Services"
                     android:textColor="#49454F"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/ex_service_1"
+                    android:id="@+id/service_1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -74,11 +74,11 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="Issuance of Development Permit (DP)"
+                    android:text="Assistance to Individuals and Families in Crisis Situation"
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/ex_service_2"
+                    android:id="@+id/service_2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -86,11 +86,11 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="Issuance of Preliminary Subdivision Development Permit (PSDP)"
+                    android:text="Capital Assistance"
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/ex_service_3"
+                    android:id="@+id/service_3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -98,11 +98,11 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="Issuance of Zoning Locational Clearance with Inspection"
+                    android:text="Issuance of Social Case Study Report, Case Summary/ Findings and Certificate of Indigency"
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/ex_service_4"
+                    android:id="@+id/service_4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -110,11 +110,11 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="Issuance of Zoning Locational Clearance Without Inspection"
+                    android:text="Issuance of Solo Parents’ Identification Card"
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/ex_service_5"
+                    android:id="@+id/service_5"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -122,33 +122,11 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="Issuance of Zoning Certificate"
+                    android:text="Issuance/ Re-Issuance of Identification Card and Purchase Booklet for Person with Disability"
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/in_ex_services"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
-                    android:text="Internal/ External Services"
-                    android:textColor="#49454F"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/in_ex_service_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="16dp"
-                    android:gravity="center"
-                    android:text="Request for Copy of Local Development Plans"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/in_ex_service_2"
+                    android:id="@+id/service_6"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -156,7 +134,31 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="Issuance of Municipal Statistical Data/Information and Geographic Information System Services"
+                    android:text="Provision of Food Assistance to Walk-In Clients"
+                    android:textColor="#49454F" />
+
+                <TextView
+                    android:id="@+id/service_7"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginRight="16dp"
+                    android:gravity="center"
+                    android:text="Assistance to Children in Need of Special Protection (CNSP)"
+                    android:textColor="#49454F" />
+
+                <TextView
+                    android:id="@+id/service_8"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginRight="16dp"
+                    android:gravity="center"
+                    android:text="Assistance to Women in Especially Difficult Circumstances (WEDC)"
                     android:textColor="#49454F" />
 
             </LinearLayout>
