--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -288,7 +288,7 @@
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/textView31"
+                    android:id="@+id/mswdo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
