--- a/app/src/main/res/layout/mswdo_service6.xml
+++ b/app/src/main/res/layout/mswdo_service6.xml
@@ -475,7 +475,7 @@
                             android:background="@drawable/cell_shape_normal_left"
                             android:gravity="top|left"
                             android:padding="5sp"
-                            android:text="2. Answers to queries and reveals his/her problem, presents credentials"
+                            android:text="2.	Answers to queries and reveals his/her problem, presents credentials"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
@@ -487,7 +487,7 @@
                             android:background="@drawable/cell_shape_normal_left"
                             android:gravity="top|left"
                             android:padding="5sp"
-                            android:text="2. Facilitates gathering of data"
+                            android:text="2.1. Determines eligibility of client for food assistance"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
@@ -499,7 +499,7 @@
                             android:background="@drawable/cell_shape_normal_left"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="None"
+                            android:text="0 payment"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
@@ -511,7 +511,7 @@
                             android:background="@drawable/cell_shape_normal_left"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="10 minutes"
+                            android:text="15 minutes"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
@@ -540,7 +540,6 @@
                             android:background="@drawable/cell_shape_normal_left_notop"
                             android:gravity="top|left"
                             android:padding="5sp"
-                            android:text="2.1. Presents documents to prove Circumstance of being a solo parent"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
@@ -552,7 +551,7 @@
                             android:background="@drawable/cell_shape_normal_left_notop"
                             android:gravity="top|left"
                             android:padding="5sp"
-                            android:text="2.1. Fills up General Intake Sheet"
+                            android:text="2.2. Approves food assistance"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
@@ -587,70 +586,7 @@
                             android:background="@drawable/cell_shape_normal_right_notop"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="@string/swo1Mswdo"
-                            android:textColor="#49454F"
-                            android:textSize="12sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
-
-                        <TextView
-                            android:id="@+id/tableClientSteps397"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@drawable/cell_shape_normal_left_notop"
-                            android:gravity="top|left"
-                            android:padding="5sp"
-                            android:textColor="#49454F"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tableAgencyAction377"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@drawable/cell_shape_normal_left_notop"
-                            android:gravity="top|left"
-                            android:padding="5sp"
-                            android:text="2.2. Prepares Social Case Study Report"
-                            android:textColor="#49454F"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tableFees344"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@drawable/cell_shape_normal_left_notop"
-                            android:gravity="center|top"
-                            android:padding="5sp"
-                            android:textColor="#49454F"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tableProcTime344"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@drawable/cell_shape_normal_left_notop"
-                            android:gravity="center|top"
-                            android:padding="5sp"
-                            android:text="4 hours"
-                            android:textColor="#49454F"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tableResponsible345"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@drawable/cell_shape_normal_right_notop"
-                            android:gravity="center|top"
-                            android:padding="5sp"
-                            android:text="@string/swo1Mswdo"
+                            android:text="MSWDO"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
                     </TableRow>
@@ -667,7 +603,7 @@
                             android:background="@drawable/cell_shape_normal_left"
                             android:gravity="top|left"
                             android:padding="5sp"
-                            android:text="3. Receives solo parent’s ID"
+                            android:text="3. Receives Food Assistance"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
@@ -679,7 +615,7 @@
                             android:background="@drawable/cell_shape_normal_left"
                             android:gravity="left|top"
                             android:padding="5sp"
-                            android:text="3.1. Prepares solo parent’s ID"
+                            android:text="3.1. Provides food assistance"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
@@ -691,7 +627,7 @@
                             android:background="@drawable/cell_shape_normal_left"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="None"
+                            android:text="0 payment"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
@@ -703,7 +639,7 @@
                             android:background="@drawable/cell_shape_normal_left"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="1 hour"
+                            android:text="5 minutes"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
@@ -715,70 +651,7 @@
                             android:background="@drawable/cell_shape_normal_right"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="@string/swo1Mswdo"
-                            android:textColor="#49454F"
-                            android:textSize="12sp" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" >
-
-                        <TextView
-                            android:id="@+id/tableClientSteps406"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@drawable/cell_shape_normal_left_notop"
-                            android:gravity="top|left"
-                            android:padding="5sp"
-                            android:textColor="#49454F"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tableAgencyAction386"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@drawable/cell_shape_normal_left_notop"
-                            android:gravity="top|left"
-                            android:padding="5sp"
-                            android:text="3.1. Facilitates signatories"
-                            android:textColor="#49454F"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tableFees353"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@drawable/cell_shape_normal_left_notop"
-                            android:gravity="center|top"
-                            android:padding="5sp"
-                            android:textColor="#49454F"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tableProcTime353"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@drawable/cell_shape_normal_left_notop"
-                            android:gravity="center|top"
-                            android:padding="5sp"
-                            android:text="20 minutes"
-                            android:textColor="#49454F"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tableResponsible354"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@drawable/cell_shape_normal_right_notop"
-                            android:gravity="center|top"
-                            android:padding="5sp"
-                            android:text="@string/swo1Mswdo"
+                            android:text="@string/mswdoAdminAide4"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
                     </TableRow>
@@ -843,7 +716,7 @@
                             android:background="@drawable/cell_shape_normal_right"
                             android:gravity="center|top"
                             android:padding="5sp"
-                            android:text="@string/swo1Mswdo"
+                            android:text="@string/mswdoAdminAide4"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
                     </TableRow>
@@ -874,7 +747,7 @@
                             android:background="@drawable/cell_shape_normal_left_bottom"
                             android:gravity="center"
                             android:padding="5sp"
-                            android:text="5 hours and 50 minutes"
+                            android:text="50 minutes"
                             android:textColor="#49454F"
                             android:textSize="12sp" />
 
