added mto, completed until mto services 1-3

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,318 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/fake_white"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+    <!-- Add your RecyclerView or other views here, below the header -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="46dp"
-        tools:layout_editor_absoluteY="-128dp">
+        android:layout_height="match_parent" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="143dp"
-            android:text="OFFICES"
-            android:textAlignment="center"
-            android:textColor="#49454F"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="182dp"
-            android:scrollbarThumbHorizontal="@android:color/transparent"
-            android:scrollbarThumbVertical="@android:color/transparent"
-            android:visibility="visible"
-            app:layout_constraintTop_toBottomOf="@+id/textView6"
-            app:layout_wrapBehaviorInParent="horizontal_only">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/macco"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:onClick="accounting"
-                    android:text="Municipal Accounting Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/administrator"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Administrator Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/agriculture"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Agriculture Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/assessor"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Assessor's Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/munBudget"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Budget Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/bplo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Business Processing and Licensing Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/civilRegistry"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Civil Registry Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/mdrrmo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Disaster Risk Reduction Management Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/engineering"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Engineering Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/menro"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Environmental and Natural Resources"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/gso"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal General Services Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/mho"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Health Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/hrmo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Human Resource Management Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/mmo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Mayor's Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/bac"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Bids and Awards Committee"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/ipmr"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Indigineous People Mandatory Representative"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/waterSystem"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Kitaotao Water System Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/liga"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="LIGA ng Barangay"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/ledipo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Local Economic Development and Investment Promotion Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/lydo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Local Youth Development Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/tourism"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Tourism Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/pwd"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Person With Disability Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/peso"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Public Employment Services Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/senior"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Office of the Senior Citizen's Affairs"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/mpdo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Planning and Development Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/popdev"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Population Development Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/sbo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Sangguniang Bayan Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/mswdo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Municipal Social Welfare and Development Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-                <TextView
-                    android:id="@+id/treasurer"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:layout_marginBottom="64dp"
-                    android:text="Municipal Treasurer's Office"
-                    android:textAlignment="center"
-                    android:textColor="#49454F" />
-
-            </LinearLayout>
-        </ScrollView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <!-- Include the custom header -->
     <include
         android:id="@+id/include"
         layout="@layout/header" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
