--- a/app/src/main/res/layout/accounting_service1.xml
+++ b/app/src/main/res/layout/accounting_service1.xml
@@ -13,8 +13,12 @@
         android:layout_height="match_parent">
 
         <ScrollView
-            android:layout_width="match_parent"
+            android:id="@+id/scrollableLeft"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:scrollbarThumbHorizontal="@android:color/transparent"
             android:scrollbarThumbVertical="@android:color/transparent">
 
@@ -32,7 +36,7 @@
                     <TableRow
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="150dp">
+                        android:layout_marginTop="180dp">
 
                         <TextView
                             android:id="@+id/titleTextService3"
