--- a/app/src/main/res/layout/office_lydo.xml
+++ b/app/src/main/res/layout/office_lydo.xml
@@ -8,46 +8,17 @@
     tools:context=".office.LYDO">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/office_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="150dp"
-            android:text="@string/titleLYDO"
-            android:textAlignment="center"
-            android:textColor="#49454F"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/services"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="LIST OF SERVICES"
-            android:textColor="#49454F"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/office_name"
-            app:layout_constraintStart_toStartOf="@+id/office_name"
-            app:layout_constraintTop_toBottomOf="@+id/office_name" />
-
         <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="match_parent"
+            android:id="@+id/scrollableLeft"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginTop="190dp"
             android:scrollbarThumbHorizontal="@android:color/transparent"
             android:scrollbarThumbVertical="@android:color/transparent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/nonScrollableRight"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -57,11 +28,33 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/office_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="160dp"
+                    android:text="@string/titleLYDO"
+                    android:textAlignment="center"
+                    android:textColor="#49454F"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/services"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="LIST OF SERVICES"
+                    android:textColor="#49454F"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
                     android:id="@+id/external_services"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="32dp"
                     android:text="External Services"
                     android:textColor="#49454F"
                     android:textStyle="bold" />
@@ -92,6 +85,31 @@
 
             </LinearLayout>
         </ScrollView>
+
+        <!-- Right side: Non-scrollable content -->
+        <LinearLayout
+            android:id="@+id/nonScrollableRight"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/scrollableLeft"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <!-- Non-scrollable content here -->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="160dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="1"
+                android:paddingLeft="20dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/floorplan" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
