--- a/app/src/main/res/layout/office_tourism.xml
+++ b/app/src/main/res/layout/office_tourism.xml
@@ -8,60 +8,55 @@
     tools:context=".office.TOURISM">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/office_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="150dp"
-            android:text="@string/titleTOURISM"
-            android:textAlignment="center"
-            android:textColor="#49454F"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/services"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="LIST OF SERVICES"
-            android:textColor="#49454F"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/office_name"
-            app:layout_constraintStart_toStartOf="@+id/office_name"
-            app:layout_constraintTop_toBottomOf="@+id/office_name" />
-
         <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="match_parent"
+            android:id="@+id/scrollableLeft"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginTop="190dp"
             android:scrollbarThumbHorizontal="@android:color/transparent"
             android:scrollbarThumbVertical="@android:color/transparent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/nonScrollableRight"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp">
+
+                <TextView
+                    android:id="@+id/office_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="160dp"
+                    android:text="@string/titleTOURISM"
+                    android:textAlignment="center"
+                    android:textColor="#49454F"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/services"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="LIST OF SERVICES"
+                    android:textColor="#49454F"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/internal_services"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="35dp"
+                    android:layout_marginTop="32dp"
                     android:text="Internal Services"
                     android:textColor="#49454F"
                     android:textStyle="bold" />
@@ -72,7 +67,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginLeft="16dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
                     android:text="Request of Tourism Statistics Data"
@@ -94,7 +89,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginLeft="16dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
                     android:text="Tourism Assistance"
@@ -102,6 +97,31 @@
 
             </LinearLayout>
         </ScrollView>
+
+        <!-- Right side: Non-scrollable content -->
+        <LinearLayout
+            android:id="@+id/nonScrollableRight"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/scrollableLeft"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <!-- Non-scrollable content here -->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="160dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="1"
+                android:paddingLeft="20dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/floorplan" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
